Fix #264 improve radio button spacing on self-marking page

--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,6 @@
 .path-mod-attendance .student-pass {
     font-size: x-large;
 }
+#page-mod-attendance-sessions .statusgroup .statusdesc {
+    margin-right: 12px;
+}
